syntax = "proto3";

package admin.doctors.city.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/admin/doctors/city/v1";


// -------------- Сервис по работе с городами докторов ---------------
service DoctorAdminCityService {
    rpc GetCities(GetDoctorsCitiesRequest) returns (GetDoctorsCitiesResponse) {
        option (google.api.http) = {get: "/api/v1/admin/doctors/cities"};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение городов врачей"};
    }
    rpc SearchCities(SearchDoctorsCitiesRequest) returns (SearchDoctorsCitiesResponse) {
        option (google.api.http) = {
            post: "/api/v1/admin/doctors/cities/search"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Поиск города по названию"};
    }
    rpc CreateCity(CreateDoctorsCityRequest) returns (CreateDoctorsCityResponse) {
        option (google.api.http) = {
            post: "/api/v1/admin/doctors/cities/create"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Создание нового города"};
    }
}


// -------------- Сервис по работе с городами докторов ---------------
message GetDoctorsCitiesRequest {}

message GetDoctorsCitiesResponse {
    repeated CityItem cities = 1;

    message CityItem {
        int64 id = 1;
        string name = 2;
    }
}

message SearchDoctorsCitiesRequest {
    string query = 1;
}

message SearchDoctorsCitiesResponse {
    repeated CityItem cities = 1;

    message CityItem {
        int64 id = 1;
        string name = 2;
    }
}

message CreateDoctorsCityRequest {
    string name = 1;
}

message CreateDoctorsCityResponse {
    int64 id = 1;
    string name = 2;
}

